feat: Enhance SEO and add Google Analytics tracking to ru.index.html
- Added Google tag (gtag.js) for tracking
- Updated meta tags for better SEO, including description and keywords
- Implemented Open Graph and Twitter Card metadata
- Added local SEO metadata for geographic targeting
- Introduced a new section for service pricing with detailed lists
- Updated hero section with new content and images
- Adjusted JavaScript for toggling visibility of elements

--- a/src/en.index.html
+++ b/src/en.index.html
@@ -2,8 +2,44 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17780051605"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'AW-17780051605');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Reliable car service in Batumi. Professional diagnostics, chassis repair, engine overhaul, auto electrician. Spare parts sales and ordering, heater repair. Quality guarantee.">
+    <meta name="keywords" content="car service Batumi, auto repair Batumi, diagnostics Batumi, chassis repair Batumi, engine repair Batumi, auto electrician Batumi, heater repair Batumi, car parts Batumi, oil change Batumi">
+
+    <!-- SEO & Open Graph -->
+    <meta name="robots" content="index, follow">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Georgia Like Auto">
+    <meta property="og:title" content="Car Service Batumi | Chassis, Engine, Electrical Repair, Spare Parts | Georgia Like Auto">
+    <meta property="og:description" content="Reliable car service in Batumi. Professional diagnostics, chassis repair, engine overhaul, auto electrician. Spare parts sales and ordering, heater repair. Quality guarantee.">
+    <meta property="og:url" content="https://sto-batumi.ge/en/">
+    <meta property="og:image" content="/src/img/logo.png">
+    <meta property="og:locale" content="en_US">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Car Service Batumi | Chassis, Engine, Electrical Repair, Spare Parts | Georgia Like Auto">
+    <meta name="twitter:description" content="Reliable car service in Batumi. Professional diagnostics, chassis repair, engine overhaul, auto electrician. Spare parts sales and ordering, heater repair. Quality guarantee.">
+    <meta name="twitter:image" content="/src/img/logo.png">
+
+    <!-- Local SEO -->
+    <meta name="geo.region" content="GE-AJ">
+    <meta name="geo.placename" content="Batumi">
+    <meta name="geo.position" content="41.6256;41.6104">
+    <meta name="ICBM" content="41.6256, 41.6104">
+
+    <link rel="canonical" href="https://sto-batumi.ge/en/">
+
     <title>Auto Service</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -64,12 +100,55 @@
             </div>
         </div>
     </header>
+    <div class="section section__hero section__white">
+        <div class="content animate-once content_hero">
+            <div class="hero__title-wrapper">
+                <h1 class="hero__title">
+                    <span>Comprehensive Car Maintenance</span>
+                </h1>
+                <span class="hero__subtitle">You just have to enjoy driving</span>
+                <div class="button button_hero">
+                    <a href="#contacts">Make an Appointment</a>
+                </div>
+            </div>
+        </div>
+        <div class="hero__img">
+            <picture class="mechanic-bg">
+                <source media="(max-width: 768px)" srcset="/src/img/Механик_0017_Background.png">
+                <img src="/src/img/Механик desktop.png" alt="сервис_сбоку" class="full mechanic-bg" loading="eager" fetchpriority="high">
+            </picture>
+            <div class="mechanic-container">
+
+                <!-- <img src="/src/img/Механик_0017_Background.png" class="mechanic-bg" alt="Background"> -->
+                <img src="/src/img/Layer 1.png" class="mechanic-layer mech-layer-1" alt="Layer 1">
+                <img src="/src/img/Layer 2.png" class="mechanic-layer mech-layer-2" alt="Layer 2">
+                <img src="/src/img/Layer 3.png" class="mechanic-layer mech-layer-3" alt="Layer 3">
+                <img src="/src/img/Layer 4.png" class="mechanic-layer mech-layer-4" alt="Layer 4">
+                <img src="/src/img/Layer 5.png" class="mechanic-layer mech-layer-5" alt="Layer 5">
+                <img src="/src/img/Layer 6.png" class="mechanic-layer mech-layer-6" alt="Layer 6">
+                <img src="/src/img/Layer 7.png" class="mechanic-layer mech-layer-7" alt="Layer 7">
+                <img src="/src/img/Layer 8.png" class="mechanic-layer mech-layer-8" alt="Layer 8">
+                <img src="/src/img/Layer 9.png" class="mechanic-layer mech-layer-9" alt="Layer 9">
+                <img src="/src/img/Layer 10.png" class="mechanic-layer mech-layer-10" alt="Layer 10">
+                <img src="/src/img/Layer 11.png" class="mechanic-layer mech-layer-11" alt="Layer 11">
+                <img src="/src/img/Layer 12.png" class="mechanic-layer mech-layer-12" alt="Layer 12">
+                <img src="/src/img/Layer 13.png" class="mechanic-layer mech-layer-13" alt="Layer 13">
+                <img src="/src/img/Layer 14.png" class="mechanic-layer mech-layer-14" alt="Layer 14">
+                <img src="/src/img/Layer 15.png" class="mechanic-layer mech-layer-15" alt="Layer 15">
+                <img src="/src/img/Layer 16.png" class="mechanic-layer mech-layer-16" alt="Layer 16">
+                <img src="/src/img/Layer 17.png" class="mechanic-layer mech-layer-17" alt="Layer 17">
+                <img src="/src/img/Layer 18.png" class="mechanic-layer mech-layer-18" alt="Layer 18">
+            </div>
+        </div>
+
+    </div>
     <div class="section section__main section__white">
         <div class="img photo photo__servis_sboku image-wrapper">
             <picture>
                 <source media="(max-width: 768px)" srcset="/src/img/сервис_сбоку-mob.jpg">
-                <img src="/src/img/сервис_сбоку-mob-preview.jpg" alt="сервис сбоку предварительный просмотр" aria-hidden="true" class="preview">
-                <img src="/src/img/сервис_сбоку.jpg" alt="сервис_сбоку" class="full" loading="eager" fetchpriority="high">
+                <!-- <img src="/src/img/сервис_сбоку-mob-preview.jpg" alt="сервис сбоку предварительный просмотр"
+                    aria-hidden="true" class="preview" /> -->
+                <img src="/src/img/сервис_сбоку.jpg" alt="сервис_сбоку" loading="eager" fetchpriority="high">
             </picture>
         </div>
         <div class="content animate-once">
@@ -86,7 +165,7 @@
             <ul class="list number">
                 <li class="list_item number_cnt">
                     <div class="number_value counter" data-start="0" data-duration="3000">
-                        7000+
+                        10000+
                     </div>
                     <div class="number_text">
                         <span>successful repairs</span>
@@ -136,7 +215,7 @@
             <h2>
                 <span>Promotions and Discounts</span>
             </h2>
-            <ul class="list list_wide">
+            <ul class="list list_wide" id="promotions-list">
                 <li class="list_item">
                     <img class="list_item__img" src="/src/img/pig.svg" alt>
                     <span>Cashback Cards</span>
@@ -201,6 +280,10 @@
                     <img class="list_item__img" src="/src/img/leak.svg" alt>
                     <span>Leak Repair</span>
                 </li>
+                <!-- <li class="list_item">
+                    <img class="list_item__img" src="/src/img/radiator.svg" alt="">
+                    <span data-t="heater_repair">Ремонт печки</span>
+                </li> -->
                 <li class="list_item">
                     <img class="list_item__img" src="/src/img/speedometer.svg" alt>
                     <span>Interior Assembly / Disassembly</span>
@@ -532,6 +615,7 @@
                 <div class="divider"></div>
 
                 <div class="contacts_text">Our social networks:</div>
+                <!-- <div class="contacts_text" data-t="social_networks">Напишите или позвоните любым удобным способом</div> -->
 
                 <ul class="contacts_icons">
                     <li class="contacts_icon">
@@ -567,14 +651,172 @@
         </div>
     </div>
 
+    <div class="section section__price" id="price">
+        <div class="img photo photo__instrumenti_na_stole">
+            <picture>
+                <source media="(max-width: 768px)" srcset="/src/img/документы.jpg">
+                <img src="/src/img/документы.jpg" alt="документы">
+            </picture>
+        </div>
+        <div class="content content_wide animate-once" data-delay="0.4s">
+
+            <h2>
+                <span>Service Prices</span>
+            </h2>
+            <p style="margin-bottom: 20px;">Standard rate: <b>50 GEL/hour</b>. Final cost depends on the car.</p>
+
+            <h3>⭐ Popular Services</h3>
+            <ul class="list price-list">
+                <li class="list_item">
+                    <span>Complex diagnostics (Chassis + Computer + Inspection)</span>
+                    <b>120 ₾</b>
+                </li>
+                <li class="list_item">
+                    <span>Chassis diagnostics (Lift inspection)</span>
+                    <b>30 ₾</b>
+                </li>
+                <li class="list_item">
+                    <span>Computer diagnostics (Reading and resetting errors)</span>
+                    <b><span>from</span> 30 ₾</b>
+                </li>
+                <li class="list_item">
+                    <span>Engine oil and filter change</span>
+                    <b><span>from</span> 40 ₾</b>
+                </li>
+                <li class="list_item">
+                    <span>Brake discs and pads replacement (per axle)</span>
+                    <b>90 - 120 ₾</b>
+                </li>
+                <li class="list_item">
+                    <span>Stabilizer links replacement (pair)</span>
+                    <b>60 ₾</b>
+                </li>
+                <li class="list_item">
+                    <span>Spark plugs replacement (4-cyl engine)</span>
+                    <b>60 ₾</b>
+                </li>
+                <li class="list_item">
+                    <span>Automatic transmission fluid change (partial)</span>
+                    <b>80 - 150 ₾</b>
+                </li>
+            </ul>
+
+            <h2 class="toggle" data-for="#full-price" style="margin-top: 30px; cursor: pointer; color: #bf5757; text-decoration: underline;">
+                <span>Show full price list ▼</span>
+            </h2>
+            
+            <div id="full-price" class="hidden">
+                
+                <h3>Diagnostics and Inspection</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Complex diagnostics (Chassis + Computer + Inspection)</span><b>120 ₾</b></li>
+                    <li class="list_item"><span>Chassis diagnostics (Lift inspection)</span><b>30 ₾</b></li>
+                    <li class="list_item"><span>Computer diagnostics (Basic)</span><b>30 ₾</b></li>
+                    <li class="list_item"><span>In-depth diagnostics and troubleshooting</span><b><span>from</span> 50 ₾<span>/hour</span></b></li>
+                    <li class="list_item"><span>Cooling system diagnostics (leaks, CO2)</span><b>30 - 60 ₾</b></li>
+                    <li class="list_item"><span>Compression test</span><b>Spark plugs repl. + 10 ₾/cyl</b></li>
+                    <li class="list_item"><span>On-site diagnostics</span><b>50 - 80 ₾</b></li>
+                </ul>
+
+                <h3>Maintenance</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Engine oil and filter change</span><b><span>from</span> 40 ₾</b></li>
+                    <li class="list_item"><span>Air filter replacement</span><b>10 - 20 ₾</b></li>
+                    <li class="list_item"><span>Cabin filter replacement</span><b>10 - 30 ₾</b></li>
+                    <li class="list_item"><span>Fuel filter replacement</span><b>30 - 120 ₾</b></li>
+                    <li class="list_item"><span>Automatic transmission fluid change (partial)</span><b>80 - 150 ₾</b></li>
+                    <li class="list_item"><span>Manual transmission / Differential oil change</span><b>40 ₾</b></li>
+                    <li class="list_item"><span>Transfer case oil change</span><b>40 - 60 ₾</b></li>
+                    <li class="list_item"><span>Antifreeze replacement</span><b>80 - 150 ₾</b></li>
+                    <li class="list_item"><span>Brake fluid replacement</span><b>60 - 100 ₾</b></li>
+                    <li class="list_item"><span>Power steering fluid replacement</span><b>60 - 80 ₾</b></li>
+                    <li class="list_item"><span>Throttle body cleaning (with adaptation)</span><b><span>from</span> 50 ₾</b></li>
+                    <li class="list_item"><span>Radiator cleaning (with removal)</span><b>90 - 280 ₾</b></li>
+                </ul>
+
+                <h3>Engine Repair</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Timing belt replacement</span><b><span>from</span> 300 ₾</b></li>
+                    <li class="list_item"><span>Timing chain replacement</span><b><span>from</span> 450 ₾</b></li>
+                    <li class="list_item"><span>Cylinder head removal/installation (4-cyl)</span><b><span>from</span> 420 ₾</b></li>
+                    <li class="list_item"><span>Engine removal/installation</span><b><span>from</span> 2500 ₾</b></li>
+                    <li class="list_item"><span>Turbocharger removal/installation</span><b><span>from</span> 400 ₾</b></li>
+                    <li class="list_item"><span>Turbocharger rebuild (removed)</span><b>300 - 500 ₾</b></li>
+                    <li class="list_item"><span>Engine overhaul / defect detection</span><b><span>from</span> 1500 ₾</b></li>
+                    <li class="list_item"><span>Valve cover gasket replacement</span><b>60 - 200 ₾</b></li>
+                    <li class="list_item"><span>Engine mounts replacement</span><b>40 - 250 ₾</b></li>
+                    <li class="list_item"><span>Water pump replacement</span><b>80 - 300 ₾</b></li>
+                    <li class="list_item"><span>Drive belt replacement</span><b>50 - 120 ₾</b></li>
+                    <li class="list_item"><span>Spark plugs replacement (4-cyl engine)</span><b>60 ₾</b></li>
+                    <li class="list_item"><span>Radiator replacement</span><b>150 - 550 ₾</b></li>
+                    <li class="list_item"><span>Thermostat replacement</span><b>60 - 300 ₾</b></li>
+                </ul>
+
+                <h3>Suspension and Chassis Repair</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Shock absorbers / struts replacement (pc.)</span><b>50 - 120 ₾</b></li>
+                    <li class="list_item"><span>Suspension arm replacement (pc.)</span><b>40 - 80 ₾</b></li>
+                    <li class="list_item"><span>Stabilizer links replacement (pair)</span><b>60 ₾</b></li>
+                    <li class="list_item"><span>Steering rack replacement</span><b>250 - 350 ₾</b></li>
+                    <li class="list_item"><span>Tie rod and end replacement (side)</span><b>60 - 80 ₾</b></li>
+                    <li class="list_item"><span>Ball joint replacement</span><b>40 - 80 ₾</b></li>
+                    <li class="list_item"><span>Bushing pressing (on removed arm)</span><b>20 ₾</b></li>
+                    <li class="list_item"><span>Wheel bearing / hub replacement</span><b>80 - 240 ₾</b></li>
+                    <li class="list_item"><span>CV joint replacement</span><b>120 - 150 ₾</b></li>
+                    <li class="list_item"><span>Drive shaft removal/installation</span><b>90 - 150 ₾</b></li>
+                    <li class="list_item"><span>Propeller shaft removal/installation</span><b>60 - 150 ₾</b></li>
+                    <li class="list_item"><span>Wheel alignment</span><b>50 - 70 ₾</b></li>
+                </ul>
+
+                <h3>Transmission Repair</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Clutch replacement (Manual)</span><b>350 - 700 ₾</b></li>
+                    <li class="list_item"><span>Auto transmission/CVT removal/installation</span><b><span>from</span> 600 ₾</b></li>
+                </ul>
+
+                <h3>Brake System Repair</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Brake discs and pads replacement (per axle)</span><b>90 - 120 ₾</b></li>
+                    <li class="list_item"><span>Brake pads replacement (pads only)</span><b><span>from</span> 60 ₾</b></li>
+                    <li class="list_item"><span>Caliper guide cleaning (during replacement)</span><b>+ 20 ₾</b></li>
+                    <li class="list_item"><span>Caliper rebuild (1 piston)</span><b>50 - 80 ₾</b></li>
+                    <li class="list_item"><span>Handbrake shoes replacement (drum)</span><b>80 ₾<span>/wheel</span></b></li>
+                </ul>
+
+                <h3>Electric and Electronics</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Battery replacement</span><b>20 - 60 ₾</b></li>
+                    <li class="list_item"><span>Alternator / Starter replacement</span><b>80 - 200 ₾</b></li>
+                    <li class="list_item"><span>Sensors replacement</span><b>30 - 150 ₾</b></li>
+                    <li class="list_item"><span>Bulbs replacement</span><b>5 - 70 ₾</b></li>
+                    <li class="list_item"><span>Wiring repair</span><b><span>from</span> 50 ₾<span>/hour</span></b></li>
+                    <li class="list_item"><span>Additional equipment installation</span><b><span>from</span> 100 ₾</b></li>
+                </ul>
+
+                <h3>Body, Interior and Others</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Windshield replacement</span><b><span>from</span> 100 ₾</b></li>
+                    <li class="list_item"><span>Heater core replacement</span><b>250 - 700 ₾</b></li>
+                    <li class="list_item"><span>Bumper removal/installation</span><b>50 - 150 ₾</b></li>
+                    <li class="list_item"><span>Cabin leak search and repair</span><b>100 - 300 ₾</b></li>
+                    <li class="list_item"><span>Interior element disassembly/assembly</span><b><span>from</span> 40 ₾</b></li>
+                    <li class="list_item"><span>Locksmith and welding works</span><b>Negotiable</b></li>
+                </ul>
+
+            </div>
+        </div>
+    </div>
+
     <footer>
         <p>Auto Service Georgia Like Auto © 2025</p>
     </footer>
     <script>
-        const toggler = (e) => {
-            document.querySelector(e.target.getAttribute('data-for')).classList.toggle('hidden');
-        }
-        document.querySelector('.toggle').addEventListener('click', toggler);
+        const togglers = document.querySelectorAll('.toggle');
+        togglers.forEach(t => {
+            t.addEventListener('click', (e) => {
+                document.querySelector(e.target.getAttribute('data-for')).classList.toggle('hidden');
+            });
+        });
     </script>
     <!-- Swiper JS -->
     <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -585,6 +827,7 @@
 
     <script defer src="/src/script.js"></script>
     <script defer src="/src/language.js"></script>
+    <script defer src="/src/promotions.js"></script>
 </body>
 
 </html>
