--- a/src/ru.index.html
+++ b/src/ru.index.html
@@ -2,8 +2,44 @@
 <html lang="ru">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17780051605"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'AW-17780051605');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Надежный автосервис в Батуми. Профессиональная диагностика, ремонт ходовой части, капитальный ремонт двигателя, автоэлектрик. Продажа и подбор запчастей, ремонт печки. Гарантия.">
+    <meta name="keywords" content="автосервис Батуми, СТО Батуми, ремонт авто Батуми, диагностика авто Батуми, ремонт ходовой части Батуми, ремонт двигателя Батуми, автоэлектрик Батуми, ремонт печки Батуми, автозапчасти Батуми, замена масла Батуми">
+
+    <!-- SEO & Open Graph -->
+    <meta name="robots" content="index, follow">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Georgia Like Auto">
+    <meta property="og:title" content="Автосервис Батуми | Ремонт ходовой, двигателя, электрики, запчасти | Georgia Like Auto">
+    <meta property="og:description" content="Надежный автосервис в Батуми. Профессиональная диагностика, ремонт ходовой части, капитальный ремонт двигателя, автоэлектрик. Продажа и подбор запчастей, ремонт печки. Гарантия.">
+    <meta property="og:url" content="https://sto-batumi.ge/">
+    <meta property="og:image" content="/src/img/logo.png">
+    <meta property="og:locale" content="ru_RU">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Автосервис Батуми | Ремонт ходовой, двигателя, электрики, запчасти | Georgia Like Auto">
+    <meta name="twitter:description" content="Надежный автосервис в Батуми. Профессиональная диагностика, ремонт ходовой части, капитальный ремонт двигателя, автоэлектрик. Продажа и подбор запчастей, ремонт печки. Гарантия.">
+    <meta name="twitter:image" content="/src/img/logo.png">
+
+    <!-- Local SEO -->
+    <meta name="geo.region" content="GE-AJ">
+    <meta name="geo.placename" content="Batumi">
+    <meta name="geo.position" content="41.6256;41.6104">
+    <meta name="ICBM" content="41.6256, 41.6104">
+
+    <link rel="canonical" href="https://sto-batumi.ge/">
+
     <title>Автосервис</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -64,12 +100,55 @@
             </div>
         </div>
     </header>
+    <div class="section section__hero section__white">
+        <div class="content animate-once content_hero">
+            <div class="hero__title-wrapper">
+                <h1 class="hero__title">
+                    <span>Комплексное техническое обслуживание автомобиля</span>
+                </h1>
+                <span class="hero__subtitle">Вам остаётся просто наслаждаться вождением</span>
+                <div class="button button_hero">
+                    <a href="#contacts">Записаться на обслуживание</a>
+                </div>
+            </div>
+        </div>
+        <div class="hero__img">
+            <picture class="mechanic-bg">
+                <source media="(max-width: 768px)" srcset="/src/img/Механик_0017_Background.png">
+                <img src="/src/img/Механик desktop.png" alt="сервис_сбоку" class="full mechanic-bg" loading="eager" fetchpriority="high">
+            </picture>
+            <div class="mechanic-container">
+
+                <!-- <img src="/src/img/Механик_0017_Background.png" class="mechanic-bg" alt="Background"> -->
+                <img src="/src/img/Layer 1.png" class="mechanic-layer mech-layer-1" alt="Layer 1">
+                <img src="/src/img/Layer 2.png" class="mechanic-layer mech-layer-2" alt="Layer 2">
+                <img src="/src/img/Layer 3.png" class="mechanic-layer mech-layer-3" alt="Layer 3">
+                <img src="/src/img/Layer 4.png" class="mechanic-layer mech-layer-4" alt="Layer 4">
+                <img src="/src/img/Layer 5.png" class="mechanic-layer mech-layer-5" alt="Layer 5">
+                <img src="/src/img/Layer 6.png" class="mechanic-layer mech-layer-6" alt="Layer 6">
+                <img src="/src/img/Layer 7.png" class="mechanic-layer mech-layer-7" alt="Layer 7">
+                <img src="/src/img/Layer 8.png" class="mechanic-layer mech-layer-8" alt="Layer 8">
+                <img src="/src/img/Layer 9.png" class="mechanic-layer mech-layer-9" alt="Layer 9">
+                <img src="/src/img/Layer 10.png" class="mechanic-layer mech-layer-10" alt="Layer 10">
+                <img src="/src/img/Layer 11.png" class="mechanic-layer mech-layer-11" alt="Layer 11">
+                <img src="/src/img/Layer 12.png" class="mechanic-layer mech-layer-12" alt="Layer 12">
+                <img src="/src/img/Layer 13.png" class="mechanic-layer mech-layer-13" alt="Layer 13">
+                <img src="/src/img/Layer 14.png" class="mechanic-layer mech-layer-14" alt="Layer 14">
+                <img src="/src/img/Layer 15.png" class="mechanic-layer mech-layer-15" alt="Layer 15">
+                <img src="/src/img/Layer 16.png" class="mechanic-layer mech-layer-16" alt="Layer 16">
+                <img src="/src/img/Layer 17.png" class="mechanic-layer mech-layer-17" alt="Layer 17">
+                <img src="/src/img/Layer 18.png" class="mechanic-layer mech-layer-18" alt="Layer 18">
+            </div>
+        </div>
+
+    </div>
     <div class="section section__main section__white">
         <div class="img photo photo__servis_sboku image-wrapper">
             <picture>
                 <source media="(max-width: 768px)" srcset="/src/img/сервис_сбоку-mob.jpg">
-                <img src="/src/img/сервис_сбоку-mob-preview.jpg" alt="сервис сбоку предварительный просмотр" aria-hidden="true" class="preview">
-                <img src="/src/img/сервис_сбоку.jpg" alt="сервис_сбоку" class="full" loading="eager" fetchpriority="high">
+                <!-- <img src="/src/img/сервис_сбоку-mob-preview.jpg" alt="сервис сбоку предварительный просмотр"
+                    aria-hidden="true" class="preview" /> -->
+                <img src="/src/img/сервис_сбоку.jpg" alt="сервис_сбоку" loading="eager" fetchpriority="high">
             </picture>
         </div>
         <div class="content animate-once">
@@ -86,7 +165,7 @@
             <ul class="list number">
                 <li class="list_item number_cnt">
                     <div class="number_value counter" data-start="0" data-duration="3000">
-                        7000+
+                        10000+
                     </div>
                     <div class="number_text">
                         <span>успешных ремонтов</span>
@@ -136,7 +215,7 @@
             <h2>
                 <span>Акции и скидки</span>
             </h2>
-            <ul class="list list_wide">
+            <ul class="list list_wide" id="promotions-list">
                 <li class="list_item">
                     <img class="list_item__img" src="/src/img/pig.svg" alt>
                     <span>Карты кэшбека</span>
@@ -201,6 +280,10 @@
                     <img class="list_item__img" src="/src/img/leak.svg" alt>
                     <span>Устранение течей</span>
                 </li>
+                <!-- <li class="list_item">
+                    <img class="list_item__img" src="/src/img/radiator.svg" alt="">
+                    <span data-t="heater_repair">Ремонт печки</span>
+                </li> -->
                 <li class="list_item">
                     <img class="list_item__img" src="/src/img/speedometer.svg" alt>
                     <span>Разбор и сбор салона</span>
@@ -532,6 +615,7 @@
                 <div class="divider"></div>
 
                 <div class="contacts_text">Наши соц. сети:</div>
+                <!-- <div class="contacts_text" data-t="social_networks">Напишите или позвоните любым удобным способом</div> -->
 
                 <ul class="contacts_icons">
                     <li class="contacts_icon">
@@ -567,14 +651,172 @@
         </div>
     </div>
 
+    <div class="section section__price" id="price">
+        <div class="img photo photo__instrumenti_na_stole">
+            <picture>
+                <source media="(max-width: 768px)" srcset="/src/img/документы.jpg">
+                <img src="/src/img/документы.jpg" alt="документы">
+            </picture>
+        </div>
+        <div class="content content_wide animate-once" data-delay="0.4s">
+
+            <h2>
+                <span>Цены на услуги</span>
+            </h2>
+            <p style="margin-bottom: 20px;">Стандартная ставка: <b>50 лари/час</b>. Итоговая стоимость зависит от авто.</p>
+
+            <h3>⭐ Самые популярные услуги</h3>
+            <ul class="list price-list">
+                <li class="list_item">
+                    <span>Комплексная диагностика (Ходовая + Компьютерная + Осмотр)</span>
+                    <b>120 ₾</b>
+                </li>
+                <li class="list_item">
+                    <span>Диагностика ходовой части (Осмотр на подъемнике)</span>
+                    <b>30 ₾</b>
+                </li>
+                <li class="list_item">
+                    <span>Компьютерная диагностика (Считывание и сброс ошибок)</span>
+                    <b><span>от</span> 30 ₾</b>
+                </li>
+                <li class="list_item">
+                    <span>Замена масла и масляного фильтра в ДВС</span>
+                    <b><span>от</span> 40 ₾</b>
+                </li>
+                <li class="list_item">
+                    <span>Замена тормозных дисков и колодок (за 1 ось)</span>
+                    <b>90 - 120 ₾</b>
+                </li>
+                <li class="list_item">
+                    <span>Замена стоек стабилизатора (за пару)</span>
+                    <b>60 ₾</b>
+                </li>
+                <li class="list_item">
+                    <span>Замена свечей зажигания (4-цил. ДВС)</span>
+                    <b>60 ₾</b>
+                </li>
+                <li class="list_item">
+                    <span>Замена масла в АКПП/CVT (частичная)</span>
+                    <b>80 - 150 ₾</b>
+                </li>
+            </ul>
+
+            <h2 class="toggle" data-for="#full-price" style="margin-top: 30px; cursor: pointer; color: #bf5757; text-decoration: underline;">
+                <span>Показать полный прайс-лист ▼</span>
+            </h2>
+            
+            <div id="full-price" class="hidden">
+                
+                <h3>Диагностика и Осмотр</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Комплексная диагностика (Ходовая + Компьютерная + Осмотр)</span><b>120 ₾</b></li>
+                    <li class="list_item"><span>Диагностика ходовой части (Осмотр на подъемнике)</span><b>30 ₾</b></li>
+                    <li class="list_item"><span>Компьютерная диагностика (базовая)</span><b>30 ₾</b></li>
+                    <li class="list_item"><span>Диагностика и поиск неисправности (углубленная)</span><b><span>от</span> 50 ₾<span>/час</span></b></li>
+                    <li class="list_item"><span>Диагностика системы охлаждения (на утечки, CO2)</span><b>30 - 60 ₾</b></li>
+                    <li class="list_item"><span>Замер компрессии</span><b>Замена свечей + 10 ₾/цил</b></li>
+                    <li class="list_item"><span>Выездная диагностика</span><b>50 - 80 ₾</b></li>
+                </ul>
+
+                <h3>Техническое обслуживание (ТО)</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Замена масла и масляного фильтра в ДВС</span><b><span>от</span> 40 ₾</b></li>
+                    <li class="list_item"><span>Замена воздушного фильтра</span><b>10 - 20 ₾</b></li>
+                    <li class="list_item"><span>Замена салонного фильтра</span><b>10 - 30 ₾</b></li>
+                    <li class="list_item"><span>Замена топливного фильтра</span><b>30 - 120 ₾</b></li>
+                    <li class="list_item"><span>Замена масла в АКПП/CVT (частичная)</span><b>80 - 150 ₾</b></li>
+                    <li class="list_item"><span>Замена масла в МКПП / редукторе</span><b>40 ₾</b></li>
+                    <li class="list_item"><span>Замена масла в раздатке</span><b>40 - 60 ₾</b></li>
+                    <li class="list_item"><span>Замена антифриза</span><b>80 - 150 ₾</b></li>
+                    <li class="list_item"><span>Замена тормозной жидкости</span><b>60 - 100 ₾</b></li>
+                    <li class="list_item"><span>Замена жидкости ГУР</span><b>60 - 80 ₾</b></li>
+                    <li class="list_item"><span>Очистка дроссельной заслонки (с адаптацией)</span><b><span>от</span> 50 ₾</b></li>
+                    <li class="list_item"><span>Промывка радиаторов (со снятием)</span><b>90 - 280 ₾</b></li>
+                </ul>
+
+                <h3>Ремонт двигателя и навесного оборудования</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Замена ремня ГРМ</span><b><span>от</span> 300 ₾</b></li>
+                    <li class="list_item"><span>Замена цепи ГРМ</span><b><span>от</span> 450 ₾</b></li>
+                    <li class="list_item"><span>Снятие/установка ГБЦ (4-цил)</span><b><span>от</span> 420 ₾</b></li>
+                    <li class="list_item"><span>Снятие/установка ДВС в сборе</span><b><span>от</span> 2500 ₾</b></li>
+                    <li class="list_item"><span>Снятие/установка турбины</span><b><span>от</span> 400 ₾</b></li>
+                    <li class="list_item"><span>Переборка турбины (на снятом)</span><b>300 - 500 ₾</b></li>
+                    <li class="list_item"><span>Капитальный ремонт / дефектовка ДВС</span><b><span>от</span> 1500 ₾</b></li>
+                    <li class="list_item"><span>Замена прокладки клапанной крышки</span><b>60 - 200 ₾</b></li>
+                    <li class="list_item"><span>Замена опор/подушек двигателя</span><b>40 - 250 ₾</b></li>
+                    <li class="list_item"><span>Замена помпы (водяного насоса)</span><b>80 - 300 ₾</b></li>
+                    <li class="list_item"><span>Замена приводного ремня</span><b>50 - 120 ₾</b></li>
+                    <li class="list_item"><span>Замена свечей зажигания (4-цил. ДВС)</span><b>60 ₾</b></li>
+                    <li class="list_item"><span>Замена радиатора охлаждения</span><b>150 - 550 ₾</b></li>
+                    <li class="list_item"><span>Замена термостата</span><b>60 - 300 ₾</b></li>
+                </ul>
+
+                <h3>Ремонт подвески и ходовой части</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Замена амортизаторов / стоек (шт.)</span><b>50 - 120 ₾</b></li>
+                    <li class="list_item"><span>Замена рычага подвески (шт.)</span><b>40 - 80 ₾</b></li>
+                    <li class="list_item"><span>Замена стоек стабилизатора (за пару)</span><b>60 ₾</b></li>
+                    <li class="list_item"><span>Замена рулевой рейки</span><b>250 - 350 ₾</b></li>
+                    <li class="list_item"><span>Замена рулевой тяги и наконечника (сторона)</span><b>60 - 80 ₾</b></li>
+                    <li class="list_item"><span>Замена шаровой опоры</span><b>40 - 80 ₾</b></li>
+                    <li class="list_item"><span>Перепрессовка сайлентблока (на снятом)</span><b>20 ₾</b></li>
+                    <li class="list_item"><span>Замена ступичного подшипника / ступицы</span><b>80 - 240 ₾</b></li>
+                    <li class="list_item"><span>Замена ШРУСа (гранаты)</span><b>120 - 150 ₾</b></li>
+                    <li class="list_item"><span>Снятие/установка приводного вала</span><b>90 - 150 ₾</b></li>
+                    <li class="list_item"><span>Снятие/установка карданного вала</span><b>60 - 150 ₾</b></li>
+                    <li class="list_item"><span>Развал-схождение</span><b>50 - 70 ₾</b></li>
+                </ul>
+
+                <h3>Ремонт трансмиссии</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Замена сцепления МКПП</span><b>350 - 700 ₾</b></li>
+                    <li class="list_item"><span>Снятие/установка АКПП/CVT</span><b><span>от</span> 600 ₾</b></li>
+                </ul>
+
+                <h3>Ремонт тормозной системы</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Замена тормозных дисков и колодок (за 1 ось)</span><b>90 - 120 ₾</b></li>
+                    <li class="list_item"><span>Замена тормозных колодок (без дисков)</span><b><span>от</span> 60 ₾</b></li>
+                    <li class="list_item"><span>Чистка направляющих (при замене)</span><b>+ 20 ₾</b></li>
+                    <li class="list_item"><span>Переборка суппорта (1 поршень)</span><b>50 - 80 ₾</b></li>
+                    <li class="list_item"><span>Замена колодок ручника (барабанных)</span><b>80 ₾<span>/колесо</span></b></li>
+                </ul>
+
+                <h3>Электрика и электроника</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Замена АКБ</span><b>20 - 60 ₾</b></li>
+                    <li class="list_item"><span>Замена генератора / стартера</span><b>80 - 200 ₾</b></li>
+                    <li class="list_item"><span>Замена датчиков</span><b>30 - 150 ₾</b></li>
+                    <li class="list_item"><span>Замена лампочек</span><b>5 - 70 ₾</b></li>
+                    <li class="list_item"><span>Ремонт электропроводки</span><b><span>от</span> 50 ₾<span>/час</span></b></li>
+                    <li class="list_item"><span>Установка доп. оборудования</span><b><span>от</span> 100 ₾</b></li>
+                </ul>
+
+                <h3>Кузов, салон и прочее</h3>
+                <ul class="list price-list">
+                    <li class="list_item"><span>Замена лобового стекла</span><b><span>от</span> 100 ₾</b></li>
+                    <li class="list_item"><span>Замена радиатора печки</span><b>250 - 700 ₾</b></li>
+                    <li class="list_item"><span>Снятие/установка бампера</span><b>50 - 150 ₾</b></li>
+                    <li class="list_item"><span>Поиск и устранение течи в салоне</span><b>100 - 300 ₾</b></li>
+                    <li class="list_item"><span>Разбор/сборка элементов салона</span><b><span>от</span> 40 ₾</b></li>
+                    <li class="list_item"><span>Слесарные и сварочные работы</span><b>Договорная</b></li>
+                </ul>
+
+            </div>
+        </div>
+    </div>
+
     <footer>
         <p>Автосервис Georgia Like Auto © 2025</p>
     </footer>
     <script>
-        const toggler = (e) => {
-            document.querySelector(e.target.getAttribute('data-for')).classList.toggle('hidden');
-        }
-        document.querySelector('.toggle').addEventListener('click', toggler);
+        const togglers = document.querySelectorAll('.toggle');
+        togglers.forEach(t => {
+            t.addEventListener('click', (e) => {
+                document.querySelector(e.target.getAttribute('data-for')).classList.toggle('hidden');
+            });
+        });
     </script>
     <!-- Swiper JS -->
     <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -585,6 +827,7 @@
 
     <script defer src="/src/script.js"></script>
     <script defer src="/src/language.js"></script>
+    <script defer src="/src/promotions.js"></script>
 </body>
 
 </html>
